tests/typing/good/testfile-shadow-3.rs

struct S { len: i32 }
fn main() {
    let s = S { len: 42 };
    let x = s.len;
}
