tests/typing/bad/testfile-generics-4.rs
fn f<T : Add> (x : T) -> T {
    x
}

fn main() {
    f(3);
}